// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. multiple ad slots 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS2 {
  align-items: center;
  flex: 1;
}

.IS3 {
  height: auto;
  overflow: hidden;
  width: 1;
}

.IS4 {
  align-items: center;
  flex: 1;
}

.IS5 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS6 {
  align-items: center;
  flex: 1;
}
</style>

<AdComposer>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS2"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={250}
            width={970}
          >
            <div
              className="IS1"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="pixel"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS4"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={1}
            width={1}
          >
            <div
              className="IS3"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="intervention"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS6"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={250}
            width={970}
          >
            <div
              className="IS5"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
</AdComposer>
`;

exports[`2. placeholder when isloading 1`] = `
<style>
.IS1 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={true}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <View
      className="IS1"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
      />
    </View>
  </MockServerClientRender>
</Ad>
`;

exports[`3. nothing if there is an error in the loading of scripts 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 0;
}

.IS2 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <View
      className="IS2"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
      >
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={0}
          width={0}
        >
          <div
            className="IS1"
          />
        </DOMContext>
      </div>
    </View>
  </MockServerClientRender>
</Ad>
`;

exports[`4. returns nothing if user has adblock 1`] = `
<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
/>
`;
